# breadsearch

./: CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  bakery.toml  benchmark_embed.py  config.example.toml  original-model-signature.txt  quantize_nomic.py  quantized_info.csv  test_npu_quantized.py
.forgejo/workflows/: beta-release.yml  dev-release.yml  mirror.yml  release.yml
.github/workflows/: release.yml
breadmill/: Cargo.toml
breadmill/src/: chunk.rs  embed.rs  extract.rs  indexer.rs  main.rs  power.rs  serve.rs  store.rs  sync_ext.rs
breadsearch/: Cargo.toml
breadsearch-shared/: Cargo.toml
breadsearch-shared/src/: lib.rs
breadsearch/src/: main.rs
docs/error-reports/: 2026-06-24-oom-minified-json-chunking.md
packaging/: breadmill.service
