[package]
name = "breadsearch"
version = "0.2.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "breadsearch"
path = "src/main.rs"

[dependencies]
breadsearch-shared = { path = "../breadsearch-shared" }
bread-theme = { git = "https://github.com/Breadway/bread-ecosystem", tag = "v0.2.8", features = ["gtk"] }
gtk4 = { version = "0.11", features = ["v4_12"] }
gtk4-layer-shell = "0.8"
serde_json = "1"
